# bigquery-jupyter-plugin

./: .gitignore  .prettierignore  README.md  RELEASE.md  conftest.py  install.json  package.json  pyproject.toml  setup.py
bigquery_jupyter_plugin/: __init__.py  handlers.py
bigquery_jupyter_plugin/tests/: __init__.py  test_handlers.py
jupyter-config/server-config/: bigquery_jupyter_plugin.json
